v0.5.3:
    - Fixed compilation errors when using !fast_prompt = 0 (thanks to Koopster for reporting this).
    - Changed default values for !fast_transitions, !fast_prompt and !death_camera_lock in "settings.asm" to 0.
    - Fixed sfx echo not working sometimes when changing music in the middle of a level (for example with P-Switch or Starman).

v0.5.2:
    - Now changing the X/Y position for the prompt text (from the settings or by writing to the respective RAM addresses) only works if the black box is disabled, since otherwise it looks broken (thanks to AmperSam for the suggestion).
    - Added an "api" file containing useful routines that can be called by external UberASM files (sadly not from other library files if using standard UberASMTool). For now it only has two, one to reset the current level's checkpoint, and one to reset all checkpoints, but more can be added in the future. For information on how to use them see "docs/api.html".
    - Fixed Retry prompt remaining glitched on screen in case Mario revives after death, for example with the Yoshi revive glitch (thanks to YouFailMe and Mega for reporting this).
    - Added !draw_all_dc_collected option to make all DCs collected be drawn or not to Retry's sprite status bar (thanks to Anas for reporting this).
    - Now enabling the sprite status bar on the title screen will work properly instead of showing glitched tiles. Note that it is still disabled by default in "sprite_status_bar_tables.asm": values are $0000 for level C7, changing those according to the guide in the file will enable it.
      NOTE: this requires inserting the new "retry_gm06.asm" gamemode file in GM 06 (see updated "how_to_insert.txt" guide).
    - Added fix for dying on the title screen with the !title_death_behavior option, with which you can choose if to reload the title screen immediately or only after the death animation has played out. You can also keep the original game's glitched behavior if you need to.